Prevent board tiles from wrapping.

--- a/src/components/Board/styles.less
+++ b/src/components/Board/styles.less
@@ -1,5 +1,9 @@
 @import '~constants.less';
 
+.row {
+    white-space: nowrap;
+}
+
 .col {
     display: inline-block;
 }
